# shed

./: LICENSE  README.md  pyproject.toml
shaders/: barcode.glsl  bezier_uv.glsl  bezier_uv2.glsl  lines.glsl  raymarch_tower.glsl  raymarching.glsl
shaders_unconfirmed/: amala.glsl  barcode.glsl  lines.glsl  raymarch_domain_warp.glsl  raymarch_tower.glsl  raymarching.glsl
shed/: __init__.py  __main__.py
shed/lib/: ShaderFile.py  exceptions.py  file_utilities.py  mesh_utilities.py  shader_utilities.py  viewer.py
shed/lib_glsl/: f_color_functions.glsl  f_core.glsl  f_distance_functions_2d.glsl  f_distance_functions_3d.glsl  f_noise_functions.glsl  f_required.glsl  f_uv_functions.glsl  fragment_shader._vcolorglsl  fragment_shader.glsl  vertex_shader.glsl
