[tool.poetry]
name = "shed"
version = "0.1.0"
description = ""
authors = ["poopipe <ill_ness@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moderngl = "^5.12.0"
pygame-ce = "^2.5.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
